feat: Allow multiple roles on credentials
