# src/types/user-credentials.type.ts
@@ -4,12 +4,10 @@
  * @typedef {object} UserCredentials
  * @property {string} id.required - User's ID
  * @property {string} username.required - User's unique name
- * @property {string} role.required - User's associated privileges
+ * @property {array<string>} roles.required - User's associated privileges
  */
-type AnyThing = Record<string, any>;
-
 export interface UserCredentials {
-  id: string;
+  id: any;
   username: string;
-  role: string;
+  roles: any[];
 }
